# Projeto-2-Aprendizagem-de-Maquina-2026.1

./: .gitignore  README.md  pyproject.toml  relatorio.md  slides_etapa1_mambular.md  slides_etapa2_resultados.md
experiments/: analysis.py  config.py  data_loader.py  metrics.py  models.py  runner.py
results/: bayesian_results.csv  best_params.json  regime_summary.csv  results.csv
scripts/: extract_results.py  list_tasks.py
