[project]
name = "projeto-am-2026"
version = "0.1.0"
description = "Projeto Final AM 2026.1 — Mambular vs baselines no TabArena-v0.1"
requires-python = ">=3.10"
dependencies = [
    "deeptab>=1.7.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "xgboost>=2.0.0",
    "autogluon.tabular>=1.4.0",
    "openml>=0.14.0",
    "optuna>=3.6.0",
    "autorank>=1.1.0",
    "baycomp>=1.0.3",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
